# phsics

./: README.md  phsics.cabal
app/: Main.hs
src/: Phsics.hs
