name:                phsics
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vektordev/phsics
license:             GPL-3
license-file:        LICENSE
author:              vpfanschilling@gmail.com
maintainer:          vpfanschilling@gmail.com
-- copyright:           2017 Author name here
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Phsics
  build-depends:       base >= 4.7 && < 5
                      ,linear
  default-language:    Haskell2010

executable phsics-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , phsics
  default-language:    Haskell2010

test-suite phsics-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , phsics
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/phsics
